# prot_assignment

./: .env.example  .gitignore  ARCHITECTURE.md  PLAN.md  README.md  TESTING.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  todos
k8s/: analysis-deployment.yaml  api-deployment.yaml  api-service.yaml  configmap.yaml  scraper-deployment.yaml  secret.yaml
migrations/alembic/: env.py
migrations/alembic/versions/: 20251210_084500_add_category_grouping_to_analysis_type_enum.py  20251210_120000_add_frequent_terms_to_analysis_type_enum.py  20251210_120100_make_scraping_result_id_nullable.py
scripts/: start.sh  test-api.sh
services/analysis/: Dockerfile  requirements.txt
services/analysis/src/: config.py  constants.py  main.py
services/analysis/src/analyzer/: analysis_strategy.py  analyzer_interface.py  category_grouping_analyzer.py  condition_grouping_analyzer.py  frequency_analyzer.py  frequent_terms_analyzer.py  keyword_analyzer.py
services/analysis/src/errors/: analysis_errors.py
services/analysis/src/models/: analysis_result_dto.py
services/analysis/src/repository/: analysis_repository.py  analysis_repository_interface.py
services/analysis/src/scheduler/: analysis_scheduler.py
services/api/: Dockerfile
services/api/src/: config.py  constants.py  main.py
services/api/src/database/: base.py  models.py
services/api/src/errors/: api_errors.py
services/api/src/handlers/: analysis_handler.py  base_handler.py  scraping_handler.py
services/api/src/middleware/: error_handler.py  logging_middleware.py
services/api/src/models/: analysis_schema.py  scraping_schema.py
services/api/src/repository/: analysis_repository.py  analysis_repository_interface.py  scraping_repository.py  scraping_repository_interface.py
services/scraper/: Dockerfile  requirements.txt
services/scraper/src/: config.py  constants.py  main.py
shared/: config.py  constants.py
shared/database/: __init__.py  engine_factory.py  url_parser.py
shared/errors/: __init__.py  base_errors.py
shared/logging/: log_formatter.py  log_handlers.py  logger_factory.py  logger_interface.py  service_logger.py
shared/patterns/: __init__.py  adapter.py  builder.py  factory.py  strategy.py
shared/types/: common_types.py  enums.py
shared/utils/: __init__.py  stop_words.py  text_extractor.py
(+13 files in other folders)
